# envoy-wasm-rust-grpc

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  envoy.yaml
filter/: Cargo.toml  build.rs
filter/src/: api.rs  lib.rs
service/: go.mod  go.sum  main.go
service/proto/: api.pb.go  api.proto  api_grpc.pb.go
