[package]
name = "envoy-wasm-rust-grpc"
version = "0.1.0"
authors = ["Lahiru Udayanga <lahirudesilva.17@cse.mrt.ac.lk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# [[bin]]
# name = "proto"
# path = "build.rs"

[dependencies]
proxy-wasm = "0.1"
log = "0.4"
protobuf = "2.0"

[build-dependencies]
protoc-rust = "2.0"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
